style/style.css
@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100%;
  min-height: 100vh;
  position: relative;
  font-family: Bai Jamjuree, sans-serif;
  font-size: 18px;
  background: url("../images/bg-header-mobile.png");
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: top;
}

img {
  max-width: 100%;
  height: auto;
}

@media screen and (min-width: 1024px) {
  body {
    background: url("../images/bg-header-desktop.png");
    background-repeat: no-repeat;
    background-size: 100%;
  }
}
.main {
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1.5rem;
}
.main img {
  padding: 1.5rem 0;
}
.main h1 {
  color: hsl(210deg, 10%, 33%);
}
.main p {
  color: #525A60;
}
.main .buttons_container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}
.main .buttons_container .ios, .main .buttons_container .mac {
  padding: 1rem 2rem;
  font-family: inherit;
  color: #fff;
  font-weight: 600;
  font-size: inherit;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
}
.main .buttons_container .ios:hover, .main .buttons_container .mac:hover {
  opacity: 80%;
  transition: 0.2s;
}
.main .buttons_container .ios.ios, .main .buttons_container .mac.ios {
  background: hsl(171deg, 66%, 44%);
  box-shadow: 0px 4px 0px #16a085;
}
.main .buttons_container .ios.mac, .main .buttons_container .mac.mac {
  background: hsl(233deg, 100%, 69%);
  box-shadow: 0px 4px 0px hsl(233deg, 62%, 57%);
}

@media screen and (min-width: 1024px) {
  .main {
    padding: 3rem 9rem;
    gap: 2rem;
  }
  .main img {
    padding: 9rem 0 3rem 0;
  }
  .main h1 {
    font-size: 3rem;
  }
  .main p {
    width: 50%;
    font-size: 1.1em;
  }
  .main .buttons_container {
    margin-top: 3rem;
    justify-content: center;
    flex-direction: row;
  }
}
.snippets {
  padding: 1.5rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}
.snippets h2 {
  color: hsl(210deg, 10%, 33%);
}
.snippets p {
  color: #525A60;
}
.snippets .image_text_container {
  margin-top: 1.5rem;
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
.snippets .image_text_container .text_container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.snippets .image_text_container .text_subcontainer h3 {
  color: hsl(210deg, 10%, 33%);
}

@media screen and (min-width: 1024px) {
  .snippets {
    padding: 3rem 9rem;
    text-align: center;
    justify-content: center;
    align-items: center;
  }
  .snippets h2 {
    font-size: 2em;
  }
  .snippets h3 {
    font-size: 1.5em;
  }
  .snippets p {
    font-size: 1.1em;
    width: 50%;
  }
  .snippets .image_text_container {
    position: relative;
    flex-direction: row;
    margin-top: 6rem;
    gap: 0;
  }
  .snippets .image_text_container p {
    width: 100%;
  }
  .snippets .image_text_container img {
    position: relative;
    max-width: 65%;
    right: 11rem;
  }
  .snippets .image_text_container .text_container {
    align-self: center;
    flex-direction: column;
    text-align: start;
  }
}
@media screen and (min-width: 1440px) {
  .snippets .image_text_container img {
    width: 100%;
    right: 13.5rem;
  }
}
.anywhere {
  padding: 5rem 1.5rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}
.anywhere h2 {
  color: hsl(210deg, 10%, 33%);
}
.anywhere p {
  color: #525A60;
}
.anywhere img {
  margin-top: 1.5rem;
}

@media screen and (min-width: 1024px) {
  .anywhere {
    padding: 9rem 9rem;
    align-items: center;
  }
  .anywhere h2 {
    font-size: 2em;
  }
  .anywhere p {
    width: 50%;
    font-size: 1.1em;
  }
  .anywhere img {
    margin-top: 3rem;
  }
}
.workflow {
  padding: 1.5rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}
.workflow h2, .workflow h3 {
  color: hsl(210deg, 10%, 33%);
}
.workflow p {
  color: hsl(201deg, 11%, 66%);
}
.workflow .tools_wrapper {
  margin-top: 3rem;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  align-items: center;
}
.workflow .tools_wrapper .feature {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}
.workflow .tools_wrapper .feature img {
  margin-bottom: 1rem;
}

@media screen and (min-width: 1024px) {
  .workflow {
    padding: 0 9rem 3rem 9rem;
    justify-content: center;
    align-items: center;
    gap: 1.5rem;
  }
  .workflow h2 {
    font-size: 2em;
  }
  .workflow h3 {
    font-size: 1.25em;
  }
  .workflow p {
    font-size: 1.1em;
  }
  .workflow .tools_wrapper {
    margin-top: 4rem;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
  }
  .workflow .tools_wrapper .feature {
    width: 30%;
  }
}
.customers {
  padding: 6rem 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5rem;
}

@media screen and (min-width: 1024px) {
  .customers {
    padding: 9rem;
    flex-direction: row;
    justify-content: space-between;
    gap: 2rem;
  }
  .customers img {
    max-width: 15%;
  }
}
.clipboard {
  padding: 1.5rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}
.clipboard h2 {
  color: hsl(210deg, 10%, 33%);
}
.clipboard p {
  color: hsl(201deg, 11%, 66%);
}
.clipboard .buttons_container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}
.clipboard .buttons_container .ios, .clipboard .buttons_container .mac {
  padding: 1rem 2rem;
  font-family: inherit;
  color: #fff;
  font-weight: 600;
  font-size: inherit;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
}
.clipboard .buttons_container .ios:hover, .clipboard .buttons_container .mac:hover {
  opacity: 80%;
  transition: 0.3s;
}
.clipboard .buttons_container .ios.ios, .clipboard .buttons_container .mac.ios {
  background: hsl(171deg, 66%, 44%);
  box-shadow: 0px 4px 0px #16a085;
}
.clipboard .buttons_container .ios.mac, .clipboard .buttons_container .mac.mac {
  background: hsl(233deg, 100%, 69%);
  box-shadow: 0px 4px 0px hsl(233deg, 62%, 57%);
}

@media screen and (min-width: 1024px) {
  .clipboard {
    padding: 3rem 9rem;
    gap: 2rem;
  }
  .clipboard h2 {
    font-size: 2em;
  }
  .clipboard p {
    width: 50%;
    font-size: 1.1em;
  }
  .clipboard .buttons_container {
    margin-top: 3rem;
    justify-content: center;
    flex-direction: row;
  }
}
footer {
  padding: 6rem 1.5rem 2.5rem 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
}
footer img {
  width: 25%;
}
footer nav ul {
  text-align: center;
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
footer nav ul li {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
footer nav ul a {
  color: hsl(210deg, 10%, 33%);
  cursor: pointer;
  text-decoration: none;
}
footer nav ul a:hover {
  color: hsl(171deg, 66%, 44%);
  transition: 0.2s;
}
footer .socials {
  list-style-type: none;
  display: flex;
  gap: 2rem;
}
footer .socials svg {
  fill: #4c545c;
}
footer .socials svg:hover {
  fill: hsl(171deg, 66%, 44%);
  transition: 0.2s;
}

@media screen and (min-width: 1024px) {
  footer {
    padding: 9rem 9rem 3rem 9rem;
    flex-direction: row;
    justify-content: space-between;
  }
  footer img {
    width: 5%;
  }
  footer nav ul {
    gap: 4rem;
    flex-direction: row;
    text-align: start;
  }
}/*# sourceMappingURL=style.css.map */

